--- a/docs/release_notes.txt
+++ b/docs/release_notes.txt
@@ -35,6 +35,48 @@ Thank you to everyone who helped with this new release!
 CHANGE LOG
 ------------------------------------------------------
 
+CSNT - Cambios de 2.50+ (build 160427) a 2.50+ (build 160428) Abril 28, 2016
+- Se corrige el mensaje de bienvenida que se muestra después de iniciar sesión.
+- Se elimina los ficheros, variables, funciones y clases usadas en el módulo de gobernabilidad, esto debido a que la rama de teacherissues no requiere dicho módulo.
+- Se conservan los cambios visuales y de seguridad realizados en el módulo de gobernabilidad. 
+
+CSNT - Cambios de 2.50+ (build 160408) a 2.50+ (build 160427) Abril 27, 2016
+- Se adiciona el módulo de gobernabilidad solicitado por el jefe del Centro de Sistemas y Nuevas Tecnologías.
+- Se mejora la presentación visual tanto del módulo administrativo como de la presentación de la encuesta, esta presentación visual es adaptada a los colores y logos de la Universidad del Quindío.
+
+Changes from 2.50+ (build 160407) to 2.50+ (build 160408) Apr 08, 2016
+-Fixed issue #10776: Quick Add not working for x-scale in Array (Numbers) (Olle Haerstedt)
+-Fixed issue #10820: kcfinder not working with symlinked /upload (reverted from commit 36c988bc75dcc680d7bf20c6df6f6d5e27ad6c3d) (Carsten Schmitz)
+-Fixed issue #10889: When importing a group in the wrong language, error (Olle Haerstedt)
+#Updated translation: French (France) by arnaud21
+#Updated translation: Indonesian by radhwaw
+#Updated translation: Norwegian (Bokmal) by pmonstad
+#Updated translation: Norwegian (Nynorsk) by pmonstad
+#Updated translation: Polish by elisa
+#Updated translation: Polish (Informal) by elisa
+#Updated translation: Portuguese (Portugal) by susete
+
+Changes from 2.50+ (build 160405) to 2.50+ (build 160407) Apr 07, 2016
+-Fixed issue #10816: Entry box for Subquestion relevance equations is to (Olle Haerstedt)
+-Fixed issue #10844: Various issues using the LS 2.50 default template (Olle Haerstedt)
+-Fixed issue #10850: Questions attributes "Display columns:" wrong default value 6->1 (t6nnp6nn)
+-Fixed issue #10861: Second label of bipolar marix question does not (Olle Haerstedt)
+-Fixed issue #10871: Invitation/Reminder buttons at bottom of token table do not function (Olle Haerstedt)
+-Fixed issue #10875: Remote control list_surveys can list whole surveys, and not only needed (Denis Chenu)
+-Fixed issue #10883: Error 500 survey permission (Olle Haerstedt)
+-Fixed issue #10884: Ranking question always in error when filled in (Olle Haerstedt)
+#Updated translation: Catalan by qualitatuvic
+#Updated translation: Dutch by mdekker, Han
+#Updated translation: Dutch (Informal) by Han
+#Updated translation: French (France) by arnaud21
+#Updated translation: Indonesian by radhwaw
+#Updated translation: Italian by lfanfoni
+#Updated translation: Italian (Informal) by lfanfoni
+#Updated translation: Norwegian (Bokmal) by pmonstad
+#Updated translation: Norwegian (Nynorsk) by pmonstad
+#Updated translation: Polish by elisa
+#Updated translation: Polish (Informal) by elisa
+
 Changes from 2.50+ (build 160404) to 2.50+ (build 160405) Apr 05, 2016
 -Fixed issue #10654: Notice messages shown when disabling update (Carsten Schmitz)
 -Fixed issue #10474: Some characters not accepted for "save & resume later" passwords in links sent by email (Carsten Schmitz)
